# tracking_graph

./: README.md  graph_tools.py  pyproject.toml  requirements.txt  spikeinterface_addons.py  tg_steps.py
.github/workflows/: publish.yml
tg_gui/: run.py  tg_gui.py
tg_gui/pages/: 1_simplify_graph.py  2_discarted_spikes.py  3_save.py
tracking_graph/: __init__.py  graphs_tools.py  leicolors.py  linking_models.py  spikeinterface_addons.py  user_api.py  utils.py
